src/infra/k8s/basalrationapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: basalrationapi
  name: basalrationapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: basalrationapi
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: basalrationapi
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Production
            - name: ASPNETCORE_URLS
              value: http://*:4900
          image: basalrationapi:1.0
          name: basalrationapi
          ports:
            - containerPort: 4900
              protocol: TCP
          volumeMounts:
            - mountPath: /app/Domain
              name: basalrationapi-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: basalrationapi-cm0
          name: basalrationapi-cm0
