src/infra/k8s/importration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: importration
  name: importration
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: importration
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: importration
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Production
            - name: ASPNETCORE_URLS
              value: http://*:4201
          image: importration:1.0
          name: importration
          ports:
            - containerPort: 4201
              protocol: TCP
          volumeMounts:
            - mountPath: /app/Domain
              name: importration-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: importration-cm0
          name: importration-cm0
