src/infra/k8s/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: rabbitmq
    spec:
      containers:
        - env:
            - name: RABBITMQ_CONFIG_FILE
              value: /rantsoenwijzer/rabbitmq.conf
          image: rabbitmq:3-management-alpine
          name: rabbitmq
          ports:
            - containerPort: 15672
              protocol: TCP
            - containerPort: 5672
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmqdata
            - mountPath: /rantsoenwijzer
              name: rabbitmq-cm1
      restartPolicy: Always
      volumes:
        - name: rabbitmqdata
          persistentVolumeClaim:
            claimName: rabbitmqdata
        - configMap:
            name: rabbitmq-cm1
          name: rabbitmq-cm1
