src/infra/k8s/basalrationapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: basalrationapi
  name: basalrationapi
spec:
  ports:
    - name: "4900"
      port: 4900
      targetPort: 4900
  selector:
    io.kompose.service: basalrationapi
