src/infra/k8s/importration-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: importration
  name: importration
spec:
  ports:
    - name: "4201"
      port: 4201
      targetPort: 4201
  selector:
    io.kompose.service: importration
